package com.springframework.aop.framework;

public interface AopProxy {
    Object getProxy();
}
